@startuml
skinparam linetype polyline


Interface Visitor{
}
Interface VisitableElement{
}

class Partition {
String partitionName
}
class SectionLibrary {
Map<String, Section> sections
}

' Tracks
class Note {
}

' TemporalGrid
class Composition {
}
class Section {
int beatPerMinutes
String name
}
class Bar {
String name
}
class Beat {
}
class Division {
}



' Enum Declaration
enum DrumsElements {

}

' All attributes

Partition "1" *--> "1" Composition : composition
Partition "1" *--> "1" SectionLibrary : sectionLibrary
SectionLibrary "1" *--> "*" Section : sections

' Grid
Composition "1" --> "*" Section : sections
Section "1" --> "*" Bar : bars
Bar "1" --> "*" Beat : beats
Beat "1" --> "*" Division : divisions
Beat "1" --> "*" Note : notes
Division "1" *-> "*" Division : divisions
Division "1" --> "*" Note : notes
Note "1" --> "1" DrumsElements : drumElement

@enduml